# gatherly

./: .gitmodules  CMakeLists.txt  README.md  build_wrapper.sh  setup.py  test.cpp
apps/: sigs_to_bins.cpp
grpc_files/: build.sh  client.py  gatherly.proto  gatherly_pb2.py  gatherly_pb2_grpc.py  server.py
include/: gatherly.hpp  gatherly_lib.hpp  utils.hpp
src/: gatherly.cpp  gatherly_lib.cpp  utils.cpp
src/pygatherly/: main.cpp
test/: test_splittedIndex.py
